aws-deployment/k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: microservice-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0
          ports:
            - containerPort: 8080
          command:
            - /opt/keycloak/bin/kc.sh
            - start
            - --http-enabled=true
            - --hostname-strict=false
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: microservice-platform
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
